fixed checkout tests

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,4 +20,23 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  activerecord:
+    attributes:
+      shipping_address:
+        first_name: "Shipping address first name"
+        last_name: "Shipping address last name"
+        street_address: "Shipping address street address"
+        street_address2: "Shipping address apt/suite"
+        zip_code: "Shipping address zip code"
+        city: "Shipping address city"
+        state_id: "Shipping address state"
+        phone_number: "Shipping address phone number"
+      billing_address:
+        first_name: "Billing address first name"
+        last_name: "Billing address last name"
+        street_address: "Billing address street address"
+        street_address2: "Billing address apt/suite"
+        zip_code: "Billing address zip code"
+        city: "Billing address city"
+        state_id: "Billing address state"
+        phone_number: "Billing address phone number"
